# petnetizen_feeder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  feeder.py  petnetizen_feeder.code-workspace  protocol.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: diagnose_feeder.py  get_schedule_poc.py  read_settings_and_sync_time.py
petnetizen_feeder/: __init__.py  feeder.py  protocol.py
tests/: __init__.py  test_import.py
